==> RT-Thread/rt-thread/bsp/hc32/libraries/hc32_drivers/drv_usbh.c <==
#include <rtthread.h>
#include <rtdevice.h>
#define LOG_TAG             "drv.usbh"
#include <drv_log.h>
#include "board_config.h"
#include "irq_config.h"
#include "drv_usbh.h"

static rt_err_t _usbh_reset_port(rt_uint8_t port)
{
    LOG_D("reset port");
    usb_hprtrst(&_hc32_usbh.regs);
    return RT_EOK;
}

static int _usbh_pipe_xfer(upipe_t pipe, rt_uint8_t token, void *buffer, int nbytes, int timeouts)
{
    int timeout = timeouts;
    uint8_t  devspeed;
    uint32_t u32NakCnt = 0;

    if (pipe->pipe_index >= USB_MAX_CH_NUM)
    {
        rt_kprintf("Error: pipe_index %d, Exceeded the max number of host channels\r\n", pipe->pipe_index);
        return -1;
    }

    while (1)
    {
        if (!connect_status)
        {
            return -1;
        }
        rt_completion_init(&urb_completion);
        usb_host_submitrequest(&_hc32_usbh,
                               pipe->pipe_index,
                               (pipe->ep.bEndpointAddress & 0x80) >> 7,
                               pipe->ep.bmAttributes,
                               token,
                               buffer,
                               nbytes,
                               0);
        if ((pipe->ep.bEndpointAddress & 0x80))
        {
            LOG_D("IN");
        }
        else
        {
            LOG_D("OUT");
        }

        rt_completion_wait(&urb_completion, timeout);
        rt_thread_mdelay(1);
        if (usb_hsot_get_ch_state(&_hc32_usbh, pipe->pipe_index) == HOST_CH_NAK)
        {
            LOG_D("nak");
#define  MAX_NAK_CNT    (5U)
            u32NakCnt ++;
            if (u32NakCnt > MAX_NAK_CNT)
            {
                return -1;
            }
            if (pipe->ep.bmAttributes == USB_EP_ATTR_INT)
            {
                rt_thread_delay((pipe->ep.bInterval * RT_TICK_PER_SECOND / 1000) > 0 ? (pipe->ep.bInterval * RT_TICK_PER_SECOND / 1000) : 1);
            }
            /* Get the speed of the connected device */
            devspeed = _hc32_usbh.host.devspeed;
            usb_hchstop(&_hc32_usbh.regs, pipe->pipe_index);
            usb_host_ch_init(&_hc32_usbh,
                             pipe->pipe_index,
                             pipe->ep.bEndpointAddress,
                             pipe->inst->address,
                             devspeed,
                             pipe->ep.bmAttributes,
                             pipe->ep.wMaxPacketSize);


            continue;
        }
        else if (usb_hsot_get_ch_state(&_hc32_usbh, pipe->pipe_index) == HOST_CH_STALL)
        {
            LOG_D("stall");
            pipe->status = UPIPE_STATUS_STALL;
            if (pipe->callback != RT_NULL)
            {
                pipe->callback(pipe);
            }
            return -1;
        }
        else if (usb_hsot_get_ch_urbstate(&_hc32_usbh, pipe->pipe_index) == HOST_CH_XFER_ERROR)
        {
            LOG_D("error");
            pipe->status = UPIPE_STATUS_ERROR;
            if (pipe->callback != RT_NULL)
            {
                pipe->callback(pipe);
            }
            return -1;
        }
        else if (HOST_CH_XFER_DONE == usb_hsot_get_ch_urbstate(&_hc32_usbh, pipe->pipe_index))
        {
            LOG_D("done");
            pipe->status = UPIPE_STATUS_OK;
            if (pipe->callback != RT_NULL)
            {
                pipe->callback(pipe);
            }
            size_t size = usb_hsot_get_ch_xfercount(&_hc32_usbh, pipe->pipe_index);
            if (pipe->ep.bEndpointAddress & 0x80)
            {
                return size;
            }
            return nbytes;
        }
        else
        {
            LOG_D("other");
        }

        continue;
    }
}

static rt_err_t _usbh_open_pipe(upipe_t pipe)
{
    uint8_t  devspeed;
    pipe->pipe_index = _usbh_get_free_pipe_index();

    if (pipe->pipe_index >= USB_MAX_CH_NUM)
    {
        rt_kprintf("Error: pipe_index %d, Exceeded the max number of host channels\r\n", pipe->pipe_index);
        return -RT_ERROR;
    }

    /* Get the speed of the connected device */
    devspeed = _hc32_usbh.host.devspeed;

    usb_host_chopen(&_hc32_usbh,
                    pipe->pipe_index,
                    pipe->ep.bEndpointAddress,
                    pipe->inst->address,
                    devspeed,
                    pipe->ep.bmAttributes,
                    pipe->ep.wMaxPacketSize);
    /* Set DATA0 PID token*/
    if (_hc32_usbh.host.hc[pipe->pipe_index].is_epin)
    {
        _hc32_usbh.host.hc[pipe->pipe_index].in_toggle = 0;
    }
    else
    {
        _hc32_usbh.host.hc[pipe->pipe_index].out_toggle = 0;
    }
    return RT_EOK;
}

static rt_err_t _usbh_close_pipe(upipe_t pipe)
{
    if (pipe->pipe_index >= USB_MAX_CH_NUM)
    {
        rt_kprintf("Error: pipe_index %d, Exceeded the max number of host channels\r\n", pipe->pipe_index);
        return -RT_ERROR;
    }
    usb_hchstop(&_hc32_usbh.regs, pipe->pipe_index);
    _usbh_free_pipe_index(pipe->pipe_index);
    return RT_EOK;
}
