==> RT-Thread/rt-thread/bsp/wch/risc-v/Libraries/ch32_drivers/drv_usbh.c <==
#include "board.h"
#include "drv_usbh.h"
#define LOG_TAG "drv.usbh"
#include "drv_log.h"

rt_err_t usbh_reset_port(rt_uint8_t port)
{
    //Disable interrupt
    USBFSH->INT_EN &= (~USBFS_UIE_DETECT);
    USBFSH->HOST_CTRL &= ~USBFS_UH_SOF_EN;

    //Set address
    USBFSH->DEV_ADDR = (USBFS_UDA_GP_BIT & USBFSH->DEV_ADDR) | (0x00 & USBFS_USB_ADDR_MASK);

    //Close port
    USBFSH->HOST_CTRL &= ~USBFS_UH_PORT_EN;

    //Reset
    USBFSH->HOST_CTRL |= USBFS_UH_BUS_RESET;
    rt_thread_mdelay(30);
    USBFSH->HOST_CTRL &= ~USBFS_UH_BUS_RESET;
    rt_thread_mdelay(20);

    //Set speed
    if ((USBFSH->HOST_CTRL & USBFS_UH_PORT_EN) == 0) { //Set speed only when port is closed
        if(USBFSH->MIS_ST & USBFS_UMS_DM_LEVEL)        //RB_UMS_DM_LEVEL: 1/Low 0/Full
        {   //Low speed
            USBFSH->BASE_CTRL |= USBFS_UC_LOW_SPEED;
            USBFSH->HOST_CTRL |= USBFS_UH_LOW_SPEED;
            USBFSH->HOST_SETUP |= USBFS_UH_PRE_PID_EN;
        }
        else
        {   //Full speed
            USBFSH->BASE_CTRL &= ~USBFS_UC_LOW_SPEED;
            USBFSH->HOST_CTRL &= ~USBFS_UH_LOW_SPEED;
            USBFSH->HOST_SETUP &= ~USBFS_UH_PRE_PID_EN;
        }
    }

    //Enable port
    USBFSH->HOST_CTRL |= USBFS_UH_PORT_EN;
    USBFSH->HOST_SETUP |= USBFS_UH_SOF_EN;

    //Enable interrupt
    USBFSH->INT_EN |= USBFS_UIE_DETECT;

    if(USBFSH->INT_FG & USBFS_UIF_DETECT)
        if(USBFSH->MIS_ST & USBFS_UMS_DEV_ATTACH)
            USBFSH->INT_FG = USBFS_UIF_DETECT;

    return RT_EOK;
}

int usbh_pipe_xfer(upipe_t pipe, rt_uint8_t token, void *buffer, int nbytes, int timeouts)
{
    rt_uint8_t usb_pid;
    rt_uint8_t *tog = (rt_uint8_t *)pipe->user_data;

    USBFSH->DEV_ADDR = (USBFS_UDA_GP_BIT & USBFSH->DEV_ADDR) | (pipe->pipe_index & USBFS_USB_ADDR_MASK);

    if(pipe->ep.bEndpointAddress & USB_DIR_IN)
    {
        usb_pid = USB_PID_IN;
        USBFSH->HOST_TX_LEN = 0x00;
    }
    else
    {
        usb_pid = (token == USBH_PID_SETUP) ? USB_PID_SETUP : USB_PID_OUT;
        rt_memcpy(usb_tx_buf, buffer, nbytes);
        USBFSH->HOST_TX_LEN = nbytes;
    }

    switch(usb_pid)
    {
    case USB_PID_IN:
        if (nbytes == 0) *tog = USB_PID_DATA1;
        USBFSH->HOST_RX_CTRL = (*tog == USB_PID_DATA1) ? USBFS_UH_R_TOG : 0x00;
        break;
    case USB_PID_OUT:
        if (nbytes == 0) *tog = USB_PID_DATA1;
        USBFSH->HOST_TX_CTRL = (*tog == USB_PID_DATA1) ? USBFS_UH_T_TOG : 0x00;
        break;
    case USB_PID_SETUP:
        *(rt_uint8_t *)pipe->inst->pipe_ep0_out->user_data = USB_PID_DATA0;
        *(rt_uint8_t *)pipe->inst->pipe_ep0_in->user_data = USB_PID_DATA1;
        USBFSH->HOST_TX_CTRL = (*tog == USB_PID_DATA1) ? USBFS_UH_T_TOG : 0x00;
        break;
    }

    rt_uint16_t try = 3;
    if ((pipe->ep.bmAttributes & USB_EP_ATTR_TYPE_MASK) == USB_EP_ATTR_CONTROL)
        try = 1000;

    while(try--)
    {
        USBFSH->HOST_EP_PID = (usb_pid << 4) | (pipe->ep.bEndpointAddress & 0x0F);
        if (rt_completion_wait(&urb_completion, timeouts) != RT_EOK)
            continue;

        if (USBFSH->INT_ST & USBHS_UIS_TOG_OK)
            *tog = (*tog == USB_PID_DATA0) ? USB_PID_DATA1 : USB_PID_DATA0;

        switch(USBFSH->INT_ST & USBHS_UIS_H_RES_MASK)
        {
        case USB_PID_DATA0:
        case USB_PID_DATA1:
            pipe->status = UPIPE_STATUS_OK;
            if (pipe->callback != RT_NULL)
                pipe->callback(pipe);
            if (usb_pid == USB_PID_IN)
            {
                rt_memcpy(buffer, usb_rx_buf, USBFSH->RX_LEN);
                return USBFSH->RX_LEN;
            }
            return nbytes;

        case USB_PID_ACK:
            pipe->status = UPIPE_STATUS_OK;
            if (pipe->callback != RT_NULL)
                pipe->callback(pipe);
            return nbytes;
        case USB_PID_NAK:
            if (pipe->ep.bmAttributes == USB_EP_ATTR_INT)
                rt_thread_delay((pipe->ep.bInterval * RT_TICK_PER_SECOND / 1000) > 0 ? (pipe->ep.bInterval * RT_TICK_PER_SECOND / 1000) : 1);
            rt_thread_mdelay(1);
            continue;

        case USB_PID_STALL:
            pipe->status = UPIPE_STATUS_STALL;
            if (pipe->callback != RT_NULL)
                pipe->callback(pipe);
            return 0;

        default:
            break;
        }
    }

    pipe->status = UPIPE_STATUS_ERROR;
    if (pipe->callback != RT_NULL)
        pipe->callback(pipe);

    return -RT_ERROR;
}

rt_err_t usbh_open_pipe(upipe_t pipe)
{
    pipe->pipe_index = pipe->inst->address & USBFS_USB_ADDR_MASK;
    pipe->user_data = rt_malloc(sizeof(rt_uint8_t));
    *(rt_uint8_t *)pipe->user_data = (pipe->ep.bEndpointAddress & USB_DIR_IN) ? USB_PID_DATA0 : USB_PID_DATA0;
    return RT_EOK;
}

rt_err_t usbh_close_pipe(upipe_t pipe)
{
    rt_free(pipe->user_data);
    return RT_EOK;
}
